// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mouse matcher should match dblclick 1`] = `
Array [
  Object {
    "button": 0,
    "buttons": 1,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 2,
    "type": "mousedown",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 3,
    "type": "mouseup",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 4,
    "type": "click",
  },
]
`;

exports[`mouse matcher should match dblclick 2`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should match dblclick 3`] = `
Array [
  Object {
    "button": 0,
    "buttons": 1,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 2,
    "type": "mousedown",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 3,
    "type": "mouseup",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 4,
    "type": "click",
  },
  Object {
    "button": 0,
    "buttons": 1,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 6,
    "type": "mousedown",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 7,
    "type": "mouseup",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 8,
    "type": "click",
  },
]
`;

exports[`mouse matcher should match dblclick 4`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should match dragging mousemove 1`] = `
Array [
  Object {
    "button": 0,
    "buttons": 1,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 500,
    "type": "mousedown",
  },
  Object {
    "positions": Array [
      Object {
        "clientX": 40,
        "clientY": 40,
        "screenX": 40,
        "screenY": 40,
        "timeOffset": 100,
      },
      Object {
        "clientX": 80,
        "clientY": 80,
        "screenX": 80,
        "screenY": 80,
        "timeOffset": 400,
      },
    ],
    "timestamp": 800,
    "type": "mousemove",
  },
  Object {
    "positions": Array [
      Object {
        "clientX": 120,
        "clientY": 120,
        "screenX": 120,
        "screenY": 120,
        "timeOffset": 100,
      },
      Object {
        "clientX": 160,
        "clientY": 160,
        "screenX": 160,
        "screenY": 160,
        "timeOffset": 400,
      },
    ],
    "timestamp": 1500,
    "type": "mousemove",
  },
  Object {
    "positions": Array [
      Object {
        "clientX": 200,
        "clientY": 200,
        "screenX": 200,
        "screenY": 200,
        "timeOffset": 100,
      },
      Object {
        "clientX": 240,
        "clientY": 240,
        "screenX": 240,
        "screenY": 240,
        "timeOffset": 400,
      },
    ],
    "timestamp": 2200,
    "type": "mousemove",
  },
  Object {
    "positions": Array [
      Object {
        "clientX": 280,
        "clientY": 280,
        "screenX": 280,
        "screenY": 280,
        "timeOffset": 100,
      },
      Object {
        "clientX": 320,
        "clientY": 320,
        "screenX": 320,
        "screenY": 320,
        "timeOffset": 400,
      },
    ],
    "timestamp": 2900,
    "type": "mousemove",
  },
  Object {
    "positions": Array [
      Object {
        "clientX": 360,
        "clientY": 360,
        "screenX": 360,
        "screenY": 360,
        "timeOffset": 100,
      },
      Object {
        "clientX": 400,
        "clientY": 400,
        "screenX": 400,
        "screenY": 400,
        "timeOffset": 400,
      },
    ],
    "timestamp": 3600,
    "type": "mousemove",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 400,
    "clientY": 400,
    "modifiers": Object {},
    "screenX": 400,
    "screenY": 400,
    "timestamp": 4200,
    "type": "mouseup",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 400,
    "clientY": 400,
    "modifiers": Object {},
    "screenX": 400,
    "screenY": 400,
    "timestamp": 4300,
    "type": "click",
  },
]
`;

exports[`mouse matcher should match dragging mousemove 2`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should match dragging mousemove 3`] = `"DRAG"`;

exports[`mouse matcher should match right click 1`] = `
Array [
  Object {
    "button": 2,
    "buttons": 2,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 500,
    "type": "mousedown",
  },
  Object {
    "button": 2,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 700,
    "type": "mouseup",
  },
  Object {
    "button": 2,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 800,
    "type": "auxclick",
  },
]
`;

exports[`mouse matcher should match right click 2`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should not match dblclick of right click 1`] = `
Array [
  Object {
    "button": 2,
    "buttons": 2,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 2,
    "type": "mousedown",
  },
  Object {
    "button": 2,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 3,
    "type": "mouseup",
  },
  Object {
    "button": 2,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 4,
    "type": "auxclick",
  },
]
`;

exports[`mouse matcher should not match dblclick of right click 2`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should not match dblclick of right click 3`] = `
Array [
  Object {
    "button": 2,
    "buttons": 2,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 6,
    "type": "mousedown",
  },
  Object {
    "button": 2,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 7,
    "type": "mouseup",
  },
  Object {
    "button": 2,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 8,
    "type": "auxclick",
  },
]
`;

exports[`mouse matcher should not match dblclick of right click 4`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should not match normal mousemove 1`] = `Object {}`;

exports[`mouse matcher should not match two sibling click with long time period 1`] = `
Array [
  Object {
    "button": 0,
    "buttons": 1,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 500,
    "type": "mousedown",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 700,
    "type": "mouseup",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 800,
    "type": "click",
  },
]
`;

exports[`mouse matcher should not match two sibling click with long time period 2`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;

exports[`mouse matcher should not match two sibling click with long time period 3`] = `
Array [
  Object {
    "button": 0,
    "buttons": 1,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 1300,
    "type": "mousedown",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 1400,
    "type": "mouseup",
  },
  Object {
    "button": 0,
    "buttons": 0,
    "clientX": 0,
    "clientY": 0,
    "modifiers": Object {},
    "screenX": 0,
    "screenY": 0,
    "timestamp": 1500,
    "type": "click",
  },
]
`;

exports[`mouse matcher should not match two sibling click with long time period 4`] = `
Object {
  "attributes": Object {},
  "id": Any<String>,
  "tagName": "HTML",
}
`;
